<resources>
    <string name="app_name" translatable="false">Procal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="export">Export</string>
    <string name="history">History</string>
    <string name="default_result">0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_programming">Programming</string>
    <string name="pref_header_about">About</string>

    <string name="about_credit">This piece of software used the work <a href="https://arxiv.org/abs/0908.3030v1">"A Java Math.BigDecimal Implementation of Core Mathematical Functions" of Richard J. Mathar</a>, which was made available under the LGPL3.0 license as a library.</string>
    <string name="about_contact">As part of the obligations to the license, if the user wish to replace this library with their own, they may contact: <a href="mailto:dcheungaa@connect.ust.hk">dcheungaa@connect.ust.hk</a></string>
    <string name="procal_logo">Procal logo</string>
    <string name="degree_symbol">DEG</string>
    <string name="radian_symbol">RAD</string>
    <string name="gradian_symbol">GRA</string>
    <string name="add">Add</string>
    <string name="_import">Import</string>

    <string name="cancel">Cancel</string>
    <string name="modify">Modify</string>
    <string name="inquiry">%1$s?:</string>
    <string name="parsing_failed">Syntax Error</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
</resources>
